# S-P-500-Next-Week-Price-Prediction

./: .env.example  .env.railway  .gitignore  .pre-commit-config.yaml  .secrets.baseline  COMMAND_CENTER_PLAYBOOK.md  Dockerfile  Dockerfile.production  Dockerfile.streamlit  Makefile  README.md  api.ipynb  api.py  deployment_checklist.sh  docker-compose.master.yml  docker-compose.monitoring.yaml  docker-compose.yml  failure_count.txt  final_status.txt  final_status_verdict.txt  final_status_verdict_2.txt  final_status_verdict_3.txt  final_status_verdict_4.txt  generate_report_animated.py  mlflow.db  pg_hba.conf  pipeline.ipynb  prometheus.yml  pyproject.toml  pytest_cmdlog.txt  pytest_final.txt  pytest_final_verdict.txt  pytest_final_verdict_2.txt  pytest_final_verdict_3.txt  pytest_final_verdict_4.txt  pytest_log.txt  pytest_log2.txt  pytest_production.txt  pytest_result.txt  pytest_result_u8.txt  (+15 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
configs/: deployment.yaml  features.yaml  logging.yaml  models.yaml  monitoring.yaml  pipeline.yaml
crypto-arbitrage-bot/: .gitignore  Dockerfile  Dockerfile.dashboard  docker-compose.yml  requirements.txt
data/: raw.dvc
docker/: .dockerignore  Dockerfile  Dockerfile.k8s  Dockerfile.mlflow  Dockerfile.simple  Dockerfile.streamlit  docker-compose.yml  nginx.conf
k8s/: deployment.yaml  redis.yaml
kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  k8s_deploy.sh  networkpolicy.yaml  pvc.yaml  secret.yaml  service.yaml  servicemonitor.yaml
mlflow/: mlflow.db
models/: README.md  (+3 more)
(+285 files in other folders)
