[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sp500-predictor"
version = "1.0.0"
description = "Machine Learning project to predict next-week S&P 500 prices"
authors = [{name = "Muhammad Aammar Amjad", email = "muhammad.aammar.amjad@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
"numpy>=1.21.0",
"pandas>=1.4.0",
"scikit-learn>=1.0.0",
"xgboost>=1.5.0",
"lightgbm>=3.3.0",
"catboost>=1.0.0",
"ta>=0.10.0",
"yfinance>=0.1.70",
"alpha-vantage>=2.3.1",
"fredapi>=0.5.0",
"optuna>=3.0.0",
"mlflow>=2.0.0",
"shap>=0.40.0",
"plotly>=5.10.0",
"dash>=2.0.0",
"sqlalchemy>=1.4.0",
"pydantic>=1.10.0",
"joblib>=1.1.0",
"tqdm>=4.64.0",
"python-dotenv>=0.19.0",
"pyyaml>=6.0",
"loguru>=0.6.0"
]

[project.optional-dependencies]
dev = [
"pytest>=7.0.0",
"pytest-cov>=4.0.0",
"black>=22.0.0",
"flake8>=5.0.0",
"mypy>=0.990",
"pre-commit>=2.20.0",
"jupyter>=1.0.0",
"ipykernel>=6.15.0"
]
deep-learning = [
"tensorflow>=2.10.0",
"torch>=1.12.0",
"pytorch-forecasting>=0.10.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--verbose --cov=src --cov-report=html --cov-report=term"